--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 @font-face { font-family: Handwriting_Font_3; font-weight: bold; src: url('Handwriting_Font_3.ttf');}
 
 html {
+    background-image: url("https://static1.squarespace.com/static/50c81b76e4b04856f8b9256e/t/53279a3ee4b0bc54fcdba59d/1395104323336/");
     background-color: slategray;
 }
 
@@ -10,14 +11,30 @@ nav {
 }
 
 button {
-    color: azure;
-    height: 3em;
+    color: #3c4141;
+    height: 2.5em;
     margin: 1.5em 0.5em 0.2em;
     border-radius: 0.5em;
+    font-size: 12pt;
+    font-weight: bold;
+    text-shadow: 2px 2px 3px rgba(199, 199, 199, 0.35);
+    background: linear-gradient(0, rgba(78, 78, 78, 0.46), rgba(248, 248, 248, 0.33));
 }
 
 button:nth-child(2) {
     background-color: #45a245;
+}
+
+button:nth-child(3) {
+    background-color: #d41d1d;
+}
+
+button:nth-child(4) {
+    background-color: #cdd41d;
+}
+
+button:nth-child(5) {
+    background-color: #1daad4;
 }
 
 div {
@@ -25,7 +42,13 @@ div {
     font-size: 14pt;
 }
 
-class1 {
+.class1, .class2, .class3, .class4, .class5
+{
+    position: relative;
+    font-size: 15pt;
+}
+
+.class1 {
     color: red;
 }
 
@@ -59,16 +82,13 @@ class1 {
 #word-area {
     width: 40em;
     margin: 0 auto;
-    overflow-y: scroll;
     padding: 0.5em 1em 0em;
 }
 
 p {
-    overflow: scroll;
 }
 
 body {
-    box-sizing: content-box;
     width: 50em;
     margin: 0 auto;
     height: 50em;
@@ -76,3 +96,26 @@ body {
     border: 0.2em dotted rgba(70, 59, 52, 0.55);
     box-shadow: 0 0 3em #3e333e;
 }
+
+#toddler-title {
+    background-image: url(image/toddler.png);
+    height: 7em;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 20em;
+    background-color: #ffffff;
+    position: relative;
+    width: 40em;
+    margin: -8em 0 0 -35em;
+    z-index: -2;
+    box-shadow: 0 0.3em 3em rgba(0, 0, 0, 0.43);
+    animation: slideLeft 5s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+@keyframes slideLeft {
+    0% {margin-left: -80em;}
+    100% {margin-left: -35em;}
+
+
